// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spartacus CDC schematics: ng-add CDC feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { CdcModule } from "@spartacus/cdc";
import { cdcTranslationChunksConfig, cdcTranslations } from "@spartacus/cdc/assets";
import { CdcAdministrationModule } from "@spartacus/cdc/organization/administration";
import { CDCB2BRegisterModule } from "@spartacus/cdc/organization/user-registration";
import { CdcConfig, CdcRootModule } from "@spartacus/cdc/root";
import { CDCUserAccountModule } from "@spartacus/cdc/user-account";
import { CDCUserProfileModule } from "@spartacus/cdc/user-profile";
import { I18nConfig, provideConfig } from "@spartacus/core";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule,
    CdcModule,
    CDCUserAccountModule,
    CDCUserProfileModule,
    CdcAdministrationModule,
    CDCB2BRegisterModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: cdcTranslations,
      chunks: cdcTranslationChunksConfig,
    },
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: 'JS_SDK_URL_PLACEHOLDER',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { cdcTranslationChunksConfig, cdcTranslations } from "@spartacus/cdc/assets";
import { CdcConfig, CdcRootModule, CDC_FEATURE } from "@spartacus/cdc/root";
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@spartacus/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: cdcTranslations,
      chunks: cdcTranslationChunksConfig,
    },
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: 'JS_SDK_URL_PLACEHOLDER',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should install the appropriate dependencies 1`] = `
"import { NgModule } from '@angular/core';
import { CDCUserAccountModule } from "@spartacus/cdc/user-account";
import { UserAccountModule } from "@spartacus/user/account";

@NgModule({
  declarations: [],
  imports: [
    UserAccountModule,
    CDCUserAccountModule
  ]
})
export class UserAccountWrapperModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should install the appropriate dependencies 2`] = `
"import { NgModule } from '@angular/core';
import { CDCUserProfileModule } from "@spartacus/cdc/user-profile";
import { UserProfileModule } from "@spartacus/user/profile";

@NgModule({
  declarations: [],
  imports: [
    UserProfileModule,
    CDCUserProfileModule
  ]
})
export class UserProfileWrapperModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should install the appropriate dependencies 3`] = `
"import { NgModule } from '@angular/core';
import { CdcAdministrationModule } from "@spartacus/cdc/organization/administration";
import { AdministrationModule } from "@spartacus/organization/administration";

@NgModule({
  declarations: [],
  imports: [
    AdministrationModule,
    CdcAdministrationModule
  ]
})
export class AdministrationWrapperModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature general setup should install the appropriate dependencies 4`] = `
"import { NgModule } from '@angular/core';
import { CDCB2BRegisterModule } from "@spartacus/cdc/organization/user-registration";
import { OrganizationUserRegistrationModule } from "@spartacus/organization/user-registration";

@NgModule({
  declarations: [],
  imports: [
    OrganizationUserRegistrationModule,
    CDCB2BRegisterModule
  ]
})
export class OrganizationUserRegistrationWrapperModule { }
"
`;

exports[`Spartacus CDC schematics: ng-add CDC feature validation of jsSDKUrl should set the given javascriptUrl 1`] = `
"import { NgModule } from '@angular/core';
import { cdcTranslationChunksConfig, cdcTranslations } from "@spartacus/cdc/assets";
import { CdcConfig, CdcRootModule, CDC_FEATURE } from "@spartacus/cdc/root";
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";

@NgModule({
  declarations: [],
  imports: [
    CdcRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [CDC_FEATURE]: {
        module: () =>
          import('@spartacus/cdc').then((m) => m.CdcModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: cdcTranslations,
      chunks: cdcTranslationChunksConfig,
    },
  }),
  provideConfig(<CdcConfig>{
    cdc: [
      {
        baseSite: 'electronics-spa',
        javascriptUrl: '<dc>.gigya.com/<api-key>',
        sessionExpiration: 3600
      },
    ],
  })
  ]
})
export class CdcFeatureModule { }
"
`;
